authentication with keycloak implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#spring config
+spring.main.banner-mode=off
+spring.application.name=api-service
 server.port=8081
+logging.level.org.keycloak=trace
+logging.level.org.springframework.security=trace
+#keycloack
+keycloak.enable-basic-auth=false
+keycloak.realm=demo-realm
+keycloak.auth-server-url=http://localhost:8080/auth
+keycloak.ssl-required=external
+keycloak.resource=demo-client
+keycloak.use-resource-role-mappings=true
+keycloak.public-client=false
+keycloak.bearer-only=true
+keycloak.security-constraints[0].authRoles[0]=demo-user-role
+keycloak.security-constraints[0].securityCollections[0].name=acces only with auth
+keycloak.security-constraints[0].securityCollections[0].patterns[0]=/message
